# langvio

./: .flake8  .gitignore  README.md  init.py  pyproject-formatting.toml  pyproject.toml  requirements.txt  setup.py
.github/: GITHUB_ACTIONS_SETUP.md
.github/workflows/: deploy.yml  test-lint.yml
docs/: api_reference.md  architecture.md  configuration.md  examples.md  index.md  installation.md  usage.md
examples/: activity_tracking_example.py  attribute_detection_example.py  basic_detection_example.py  combined_analysis_example.py  counting_example.py  running_examples_guide.md  simple_yolo.py  spatial_relationship_example.py  verification_example.py  video_analysis.py
langvio/: __init__.py  cli.py  config.py  default_config.yaml
langvio/core/: base.py  pipeline.py  registry.py
langvio/llm/: __init__.py  base.py  factory.py  google.py  langchain_models.py  openai.py  openai_models.py
langvio/media/: processor.py  visualization.py
langvio/prompts/: __init__.py  constants.py  templates.py
langvio/utils/: env_loader.py  file_utils.py  llm_utils.py  logging.py  vision_utils.py
langvio/vision/: base.py  color_detection.py  utils.py
langvio/vision/yolo/: detector.py
tests/: README_TESTS.md  conftest.py  test_color_detector.py  test_config.py  test_create_pipeline.py  test_file_utils.py  test_llm_utils.py  test_main.py  test_pipeline.py  test_registry.py
webapp/: app.py
webapp/templates/: result.html
