[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langvio"
version = "0.1.0"
description = "Connect language models to vision models for natural language visual analysis"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.7.0",
    "numpy>=1.18.0",
    "opencv-python>=4.5.0",
    "pyyaml>=5.4.0",
    "langchain>=0.0.267",
    "ultralytics>=8.0.0",
    "pillow>=8.0.0",
    "tqdm>=4.64.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
openai = [
    "openai>=0.27.0",
]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "flake8>=3.9.2",
    "mypy>=0.910",
]

[project.scripts]
langvio = "langvio.cli:main"